--- a/ניהולהזמנות.html
+++ b/ניהולהזמנות.html
@@ -879,7 +879,7 @@
         </div>
         <div class="sidebar">
             <button class="close-sidebar"><i class="fas fa-times"></i></button>
-            <div class="menu-item"><i class="index.html"></i> <span>דף הבית</span></div>
+            <a href="index.html" class="menu-item"><i class="fas fa-home"></i> <span>דף הבית</span></a>
             <div class="menu-item"><i class="fas fa-shopping-cart"></i> <span>הזמנות</span></div>
             <div class="menu-item"><i class="fas fa-chart-bar"></i> <span>סטטיסטיקות</span></div>
             <div class="menu-item"><i class="fas fa-cog"></i> <span>הגדרות</span></div>
