Update דוגמה לדף תשלום.html

--- a/דוגמה לדף תשלום.html
+++ b/דוגמה לדף תשלום.html
@@ -189,7 +189,7 @@ button:hover {
     <div class="payment-form">
         <div class="glow"></div>
         <div class="logo">GPI תשלומים</div>
-        <h1>חווית תשלום יוקרתית</h1>
+        <h1>תשלום מאובטח</h1>
         <form id="paymentForm">
             <div class="form-group">
                 <label for="cardNumber">מספר כרטיס</label>
