--- a/דוגמה לדף תשלום.html
+++ b/דוגמה לדף תשלום.html
@@ -1,4 +1,7 @@
-<html><head><base href="https://gpipayments.com/"><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>GPI - חווית תשלום יוקרתית</title><script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script><style>
+<!DOCTYPE html>
+<html lang="he">
+<head>
+    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>GPI - תשלום </title><script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script><style>
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;600;700&display=swap');
 
 :root {
