--- a/2.html
+++ b/2.html
@@ -314,6 +314,8 @@
                 <a href="#">תנאי שימוש</a>
                 <a href="#">מדיניות פרטיות</a>
                 <a href="#">צור קשר</a>
+                <a href="ניהולהזמנות.html">ניהול הזמנות</a>
+                <a href="דוגמה לדף תשלום.html">דוגמה לדף תשלום</a>
             </div>
             <p>&copy; 2023 GPI - Global Products Industries Connect. כל הזכויות שמורות.</p>
         </div>
