--- a/ניהולהזמנות.html
+++ b/ניהולהזמנות.html
@@ -889,7 +889,7 @@ a.menu-item:hover {
         </div>
         <div class="sidebar">
             <button class="close-sidebar"><i class="fas fa-times"></i></button>
-            <a href="index.html" class="menu-item"><i class="fas fa-home"></i> <span>דף הבית</span></a>
+            <a href="2.html" class="menu-item"><i class="fas fa-home"></i> <span>דף הבית</span></a>
             <a href="דוגמה לדף תשלום.html" class="menu-item"><i class="fas fa-shopping-cart"></i> <span>דוגמה לדף תשלום</span></a>
             <div class="menu-item"><i class="fas fa-chart-bar"></i> <span>סטטיסטיקות</span></div>
             <div class="menu-item"><i class="fas fa-cog"></i> <span>הגדרות</span></div>
