--- a/2.html
+++ b/2.html
@@ -316,6 +316,8 @@
                 <a href="#">צור קשר</a>
                 <a href="ניהולהזמנות.html">ניהול הזמנות</a>
                 <a href="דוגמה לדף תשלום.html">דוגמה לדף תשלום</a>
+                <a href="1.html">נסיון אימות גוגל</a>
+                
             </div>
             <p>&copy; 2023 GPI - Global Products Industries Connect. כל הזכויות שמורות.</p>
         </div>
