--- a/ניהולהזמנות.html
+++ b/ניהולהזמנות.html
@@ -342,15 +342,6 @@
         z-index: 1000;
         animation: slideUp 0.5s ease-out;
     }
-    a.menu-item {
-    text-decoration: none; /* מסיר את הקו התחתון */
-    color: inherit; /* שומר על הצבע המקורי של הטקסט */
-}
-
-a.menu-item:hover {
-    color: #3498db; /* צבע מותאם אישית בזמן ריחוף, אם אתה רוצה */
-}
-
 
     @keyframes slideUp {
         from {
@@ -564,7 +555,6 @@ a.menu-item:hover {
             margin-top: 15px;
             margin-right: 0;
         }
-        
     }
 </style>
 <script type="module">
@@ -889,8 +879,8 @@ a.menu-item:hover {
         </div>
         <div class="sidebar">
             <button class="close-sidebar"><i class="fas fa-times"></i></button>
-            <a href="2.html" class="menu-item"><i class="fas fa-home"></i> <span>דף הבית</span></a>
-            <a href="דוגמה לדף תשלום.html" class="menu-item"><i class="fas fa-shopping-cart"></i> <span>דוגמה לדף תשלום</span></a>
+            <div class="menu-item"><i class="fas fa-home"></i> <span>דף הבית</span></div>
+            <div class="menu-item"><i class="fas fa-shopping-cart"></i> <span>הזמנות</span></div>
             <div class="menu-item"><i class="fas fa-chart-bar"></i> <span>סטטיסטיקות</span></div>
             <div class="menu-item"><i class="fas fa-cog"></i> <span>הגדרות</span></div>
         </div>
@@ -926,7 +916,7 @@ a.menu-item:hover {
                 <canvas id="orderChart"></canvas>
             </div>
 
-           
+            <button id="addOrderBtn"><i class="fas fa-plus"></i> הוסף הזמנה חדשה</button>
 
             <div class="order-container">
                 <!-- Order cards will be dynamically added here -->
@@ -991,7 +981,7 @@ a.menu-item:hover {
     <div class="notification"></div>
 
     <footer>
-        <p>&copy; zevi - GPI</p>
+        <p>&copy;  zevi by GPI </p>
     </footer>
 </body>
 </html>
