--- a/ניהולהזמנות.html
+++ b/ניהולהזמנות.html
@@ -880,6 +880,7 @@
         <div class="sidebar">
             <button class="close-sidebar"><i class="fas fa-times"></i></button>
             <div class="menu-item"><i class="fas fa-home"></i> <span>דף הבית</span></div>
+             <div class="menu-item"><i class="fas fa-users"></i> <span>תיקי לקוחות</span></div>
             <div class="menu-item"><i class="fas fa-shopping-cart"></i> <span>הזמנות</span></div>
             <div class="menu-item"><i class="fas fa-chart-bar"></i> <span>סטטיסטיקות</span></div>
             <div class="menu-item"><i class="fas fa-cog"></i> <span>הגדרות</span></div>
