--- a/ניהולהזמנות.html
+++ b/ניהולהזמנות.html
@@ -880,11 +880,12 @@
         <div class="sidebar">
             <button class="close-sidebar"><i class="fas fa-times"></i></button>
             <div class="menu-item"><i class="fas fa-home"></i> <span>דף הבית</span></div>
-            <div class="menu-item">
-  <a href="תיקי לקוחות.html">
+          <div class="menu-item">
+  <a href="תיקי לקוחות.html" style="text-decoration: none; color: inherit;">
     <i class="fas fa-users"></i> <span>תיקי לקוחות</span>
   </a>
 </div>
+
 
             <div class="menu-item"><i class="fas fa-shopping-cart"></i> <span>הזמנות</span></div>
             <div class="menu-item"><i class="fas fa-chart-bar"></i> <span>סטטיסטיקות</span></div>
