--- a/תיקי לקוחות.html
+++ b/תיקי לקוחות.html
@@ -1,4 +1,6 @@
-<html><head><base href="https://gpi0-d1e6d.firebaseapp.com/">
+<!DOCTYPE html>
+<html lang="he">
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>תיקי לקוחות - GPI</title>
