--- a/סטטיסטיקות.html
+++ b/סטטיסטיקות.html
@@ -229,10 +229,10 @@
     <i class="fas fa-users"></i> <span>תיקי לקוחות</span>
   </a>
 </div>
-
+            
 <div class="menu-item">
-  <a href="הזמנות.html" style="text-decoration: none; color: inherit;">
-    <i class="fas fa-shopping-cart"></i> <span>הזמנות</span>
+  <a href="ניהולהזמנות.html" style="text-decoration: none; color: inherit;">
+    <i class="fas fa-shopping-cart"></i> <span>ניהול הזמנות</span>
   </a>
 </div>
 
