--- a/ניהולהזמנות.html
+++ b/ניהולהזמנות.html
@@ -893,8 +893,8 @@
 </div>
 
 <div class="menu-item">
-  <a href="הזמנות.html" style="text-decoration: none; color: inherit;">
-    <i class="fas fa-shopping-cart"></i> <span>הזמנות</span>
+  <a href="ניהולהזמנות.html" style="text-decoration: none; color: inherit;">
+    <i class="fas fa-shopping-cart"></i> <span>ניהול הזמנות</span>
   </a>
 </div>
 
