--- a/תיקי לקוחות.html
+++ b/תיקי לקוחות.html
@@ -416,10 +416,36 @@
         </div>
         <div class="sidebar">
             <button class="close-sidebar"><i class="fas fa-times"></i></button>
-            <div class="menu-item"><i class="fas fa-home"></i> <span>דף הבית</span></div>
-            <div class="menu-item"><i class="fas fa-users"></i> <span>תיקי לקוחות</span></div>
-            <div class="menu-item"><i class="fas fa-chart-bar"></i> <span>סטטיסטיקות</span></div>
-            <div class="menu-item"><i class="fas fa-cog"></i> <span>הגדרות</span></div>
+           <div class="menu-item">
+  <a href="2.html" style="text-decoration: none; color: inherit;">
+    <i class="fas fa-home"></i> <span>דף הבית</span>
+  </a>
+</div>
+
+<div class="menu-item">
+  <a href="תיקי לקוחות.html" style="text-decoration: none; color: inherit;">
+    <i class="fas fa-users"></i> <span>תיקי לקוחות</span>
+  </a>
+</div>
+
+<div class="menu-item">
+  <a href="ניהולהזמנות.html" style="text-decoration: none; color: inherit;">
+    <i class="fas fa-shopping-cart"></i> <span>ניהול הזמנות</span>
+  </a>
+</div>
+
+<div class="menu-item">
+  <a href="סטטיסטיקות.html" style="text-decoration: none; color: inherit;">
+    <i class="fas fa-chart-bar"></i> <span>סטטיסטיקות</span>
+  </a>
+</div>
+
+<div class="menu-item">
+  <a href="הגדרות.html" style="text-decoration: none; color: inherit;">
+    <i class="fas fa-cog"></i> <span>הגדרות</span>
+  </a>
+</div>
+
         </div>
         <div class="main-content">
             <div class="header">
