--- a/ניהולהזמנות.html
+++ b/ניהולהזמנות.html
@@ -651,7 +651,7 @@
                 <span><i class="fas fa-info-circle"></i> תיאור: ${order.productDescription}</span>
                 <span><i class="fas fa-cube"></i> חומרי גלם: ${order.productMaterials}</span>
                 <span><i class="fas fa-box"></i> כמות: ${order.productQuantity}</span>
-                <span><i class="fas fa-shekel-sign"></i> מחיר משוער: ${order.estimatedPrice}</span>
+                <span><i class="fas fa-dollar-sign"></i> מחיר משוער: ${order.estimatedPrice}</span>
                 <span><i class="fas fa-calendar-alt"></i> תאריך אספקה: ${order.deliveryDate}</span>
                 <span><i class="fas fa-clipboard-list"></i> דרישות נוספות: ${order.additionalRequirements}</span>
                 <span><i class="fas fa-user"></i> איש קשר: ${order.contactName}</span>
@@ -977,7 +977,7 @@
                     <input type="number" id="productQuantity" required>
                 </div>
                 <div class="form-group">
-                    <label for="estimatedPrice">$ מחיר משוער</label>
+                    <label for="estimatedPrice"> מחיר משוער</label>
                     <input type="number" id="estimatedPrice" required>
                 </div>
                 <div class="form-group">
