--- a/סטטיסטיקות.html
+++ b/סטטיסטיקות.html
@@ -260,7 +260,7 @@
                     <div class="stat-value" id="totalOrders">טוען...</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-title">סה"כ הכנסות</div>
+                    <div class="stat-title">סה"כ סכום הזמנות</div>
                     <div class="stat-value" id="totalRevenue">טוען...</div>
                 </div>
 
@@ -292,7 +292,7 @@
                     <div class="stat-value" id="monthlyOrders">טוען...</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-title">הכנסות החודש</div>
+                    <div class="stat-title">סכום הזמנות החודש</div>
                     <div class="stat-value" id="monthlyRevenue">טוען...</div>
                 </div>
                 <div class="stat-card">
