--- a/2.html
+++ b/2.html
@@ -271,45 +271,60 @@
             .category-button {
                 width: 100%;
             }
-            .profile-container {
+            
+
+
+
+
+             .profile-container {
             position: fixed;
-            top: 20px;
-            right: 20px;
-            text-align: center;
-            z-index: 1001;
+            bottom: 20px;
+            left: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            z-index: 1000;
         }
 
         .profile-picture {
-            width: 80px;
-            height: 80px;
+            width: 60px;
+            height: 60px;
             border-radius: 50%;
-            border: 3px solid var(--secondary-color);
+            border: 3px solid var(--primary-color);
             cursor: pointer;
-            transition: border-color 0.3s ease;
+            transition: transform 0.3s ease;
         }
 
-        .profile-picture:hover {
-            border-color: var(--accent-color);
-        }
-
-        .logout-button {
+        .profile-menu {
             display: none;
-            margin-top: 10px;
-            padding: 10px 20px;
-            border: none;
-            background-color: var(--accent-color);
+            position: absolute;
+            bottom: 70px;
+            left: 0;
+            background-color: var(--primary-color);
             color: var(--light-text);
-            border-radius: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            padding: 10px;
+            width: 150px;
+            text-align: center;
+            z-index: 1000;
+        }
+
+        .profile-menu button {
+            background-color: var(--accent-color);
+            border: none;
+            color: var(--light-text);
+            padding: 10px;
+            border-radius: 5px;
             cursor: pointer;
-            font-size: 1rem;
             transition: background-color 0.3s ease;
         }
 
-        .logout-button:hover {
+        .profile-menu button:hover {
             background-color: #c0392b;
         }
 
-        .profile-container.show-logout .logout-button {
+        .profile-menu.show {
             display: block;
         }
     </style>
@@ -343,6 +358,14 @@
                 <p>גלה מפעלים מובילים מכל העולם, צור קשר ישיר והזמן מוצרים איכותיים בכמויות מסחריות</p>
                 <a href="#categories" class="cta-button">מצא קטגוריות עכשיו</a>
             </div>
+
+
+            <div class="profile-container">
+        <img src="path/to/profile-picture.jpg" alt="Profile Picture" class="profile-picture" id="profile-picture">
+        <div class="profile-menu" id="profile-menu">
+            <button id="logout-button">התנתק</button>
+        </div>
+    </div>
         </section>
 
         <section id="categories" class="categories-section">
